Josh corrected paragraph spacing and such.

--- a/output/tables/2_abc.tex
+++ b/output/tables/2_abc.tex
@@ -1,10 +1,8 @@
 \section{ABC Estimates}
 
-We analyze 131 outcomes when evaluating ABC separately from CARE. 
+\noindent We analyze 131 outcomes when evaluating ABC separately from CARE. Table~\ref{table:abc_rslt_pooled_counts} shows stronger results relative to those from combining ABC with CARE when we do not condition on statistical significance. The counts from the combining function diminish slightly relative to jointly evaluating ABC and CARE when we condition on statistical significance, but this is due to having substantially fewer subjects. Regardless, the statistics provide sufficient evidence to reject the hypothesis that the marginal distribution of the outcomes are the same across treatment and control groups in ABC. \\
 
-We analyze 95 outcomes when combining the ABC and CARE samples. Table~\ref{table:abccare_rslt_pooled_counts} shows stronger results relative to those from combining ABC with CARE when we do not condition on statistical significance. The counts from the combining function diminish slightly relative to jointly evaluating ABC and CARE when we condition on statistical significance, but this is due to having substantially fewer subjects. Regardless, the statistics provide sufficient evidence to reject the hypothesis that the marginal distribution of the outcomes are the same across treatment and control groups in ABC.
-
-For both males and females, we find large and significant effects on IQ and achievement test scores early on in life. In the case of females, these effects persist up to age 21. We also find that ABC increased the likelihood of employment for mothers of male subjects. Large benefits for males can also be seen in the area of health, with lower incidence of obesity, and improved measures of blood pressure and cholesterol. Females benefited from increased educational attainment and increased parental income.
+\noindent For both males and females, we find large and significant effects on IQ and achievement test scores early on in life. In the case of females, these effects persist up to age 21. We also find that ABC increased the likelihood of employment for mothers of male subjects. Large benefits for males can also be seen in the area of health, with lower incidence of obesity, and improved measures of blood pressure and cholesterol. Females benefited from increased educational attainment and increased parental income.\\
 
 \def\arraystretch{0.6}
 
