--- a/output/tables/3_care.tex
+++ b/output/tables/3_care.tex
@@ -1,8 +1,8 @@
 \section{CARE Estimates}
 
-We analyze 95 outcomes when evaluating CARE. Table~\ref{table:care_rslt_pooled_counts} shows that CARE did not have as broad of an effect as ABC. Nevertheless, over 60\% of all treatment effect estimates are socially positive. After conditioning on statistical significance, over 25\% of treatment effects remain socially positive, and provides sufficient evidence to reject that treatment and control groups in CARE have the same distribution for outcomes.
+\noindent We analyze 95 outcomes when evaluating CARE on its own. Table~\ref{table:care_rslt_pooled_counts} shows that CARE did not have as broad of an effect as ABC. Nevertheless, over 60\% of all treatment effect estimates are socially positive. After conditioning on statistical significance, over 25\% of treatment effects remain socially positive, and provides sufficient evidence to reject that treatment and control groups in CARE have the same distribution for outcomes. \\
 
-Similar to ABC, males in treatment scored higher in IQ tests on average. However, in the case of females, the effects of the program on IQ test scores vary across the estimation methods. We also find that males in treatment were much more likely to have gone onto college and graduate, smoked less, and were less likely to use drugs. Lastly, we also find that both males and females exhibited improved measures of mental health.
+\noindent Similar to ABC, males in treatment scored higher in IQ tests on average. However, in the case of females, the effects of the program on IQ test scores vary across the estimation methods. We also find that males in treatment were much more likely to have gone onto college and graduate, smoked less, and were less likely to use drugs. Lastly, we also find that both males and females exhibited improved measures of mental health. \\
 
 \def\arraystretch{0.6}
 
