anna pushing and then i'm done bitchezzzz

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -148,7 +148,7 @@ our attention to interpolating labor income. We employ the CNLSY dataset to mode
 income at each age from 22 to 29. We use ordinary least squares and regress labor income of
 CNLSY subjects on background characteristics and early adult outcomes. Variables for background
 characteristics consist of an indicator for being  black, mother's education, and sex. Variables
-for early adult outcomes consist of labor income at ages 21 and 30, years of education at age 30, average
+used to interpolate early adult outcomes consist of labor income at ages 21 and 30, years of education at age 30, average
 PIAT math scores from ages 5 to 10, and BMI at age 34. We estimate the model on 1,000 bootstrap
 resamples of the CNLSY to obtain a measure of prediction error, and denote the vectors of coefficients
 \emph{for the outcome variables} by $\beta_{a,s}$, where $a \in \{22, 23, \dots, 29\}$ denotes age, and
