--- a/AppOutput/Methodology/transitiontable.tex
+++ b/AppOutput/Methodology/transitiontable.tex
@@ -1,17 +1,16 @@
-\begin{tabular}{l|ccccccccccccccc} \toprule
-\multicolumn{1}{c}{Age $a$} & \multicolumn{15}{c}{Age $a+1$} \\ \midrule
-  & Heart & Hypertension & Stroke & Lung Disease & Diabetes & Cancer & Disability & Mortality & Smoking & Obesity & Health  & DI  & SS  & DB  & SSI  \\
-&  Disease &  &  & Disease & & & & &  &  & Insurance & Claim & Claim & Claim & Claim \\
-Heart Disease & & & $\times$& & & &$\times$ &$\times$ &$\times$ &     $\times$        &  $\times$      &  $\times$  & $\times$ & $\times$ & $\times$\\
-Hypertension  & & & $\times$ & & & &$\times$ &$\times$ &$\times$ &         $\times$    &   $\times$    & $\times$   & $\times$ & $\times$ & $\times$ \\
-Stroke           & & & & & & &$\times$ &$\times$ &$\times$ &       $\times$       &     $\times$   &   $\times$  & $\times$ & $\times$ & $\times$ \\
-Lung Disease & & & & & & &$\times$ &$\times$ & $\times$&       $\times$      &   $\times$     &   $\times$  &$\times$  & $\times$ & $\times$ \\
-Diabetes       & $\times$ &$\times$  & &  $\times$ & & &$\times$ &$\times$ & $\times$&         $\times$    &   $\times$     &  $\times$   & $\times$ & $\times$ & $\times$ \\
-Cancer         & & & &  $\times$ & & &$\times$ & $\times$& $\times$&     $\times$       &   $\times$      &   $\times$  & $\times$ & $\times$ & $\times$ \\
-Disability     & & & & & & &$\times$ &$\times$ & $\times$&     $\times$       &    $\times$     &     $\times$  & $\times$ & $\times$ & $\times$ \\
+\begin{tabular}{l|cccccccccccccc} \toprule
+\multicolumn{1}{c}{Age $a$} & \multicolumn{14}{c}{Age $a+1$} \\ \midrule
+  & Heart & Hypertension & Stroke & Lung Disease & Diabetes & Cancer & Disability & Mortality & Smoking & Obesity & Health  & DI  & SS  & SSI  \\
+&  Disease &  &  & Disease & & & & &  &  & Insurance & Claim & Claim & Claim \\
+Heart Disease & & & $\times$& & & &$\times$ &$\times$ &$\times$ &     $\times$        &  $\times$      &  $\times$  & $\times$ & $\times$\\
+Hypertension  & & & $\times$ & & & &$\times$ &$\times$ &$\times$ &         $\times$    &   $\times$    & $\times$   & $\times$ & $\times$ \\
+Stroke           & & & & & & &$\times$ &$\times$ &$\times$ &       $\times$       &     $\times$   &   $\times$  & $\times$ & $\times$ \\
+Lung Disease & & & & & & &$\times$ &$\times$ & $\times$&       $\times$      &   $\times$     &   $\times$  &$\times$  & $\times$ \\
+Diabetes       & $\times$ &$\times$  & &  $\times$ & & &$\times$ &$\times$ & $\times$&         $\times$    &   $\times$     &  $\times$   & $\times$ & $\times$ \\
+Cancer         & & & &  $\times$ & & &$\times$ & $\times$& $\times$&     $\times$       &   $\times$      &   $\times$  & $\times$ & $\times$ \\
+Disability     & & & & & & &$\times$ &$\times$ & $\times$&     $\times$       &    $\times$     &     $\times$  & $\times$ & $\times$  \\
 \midrule
-DI Claim      & & & & &  & & & & &            &    $\times$     & $\times$      & $\times$ & $\times$ & $\times$ \\
-SS Claim     & & & & & & & & &           &         &    $\times$  & & & $\times$ & $\times$\\
-DB Claim    & & & & &&  & & & &         &        &      & $\times$ & & $\times$ \\
-SSI Claim   & & & & &&  & & & &         &        &      & & & $\times$ \\ \bottomrule
+DI Claim      & & & & &  & & & & &            &    $\times$     & $\times$      & $\times$ & $\times$\\
+SS Claim     & & & & & & & & &           &         &    $\times$  & & & $\times$\\
+SSI Claim   & & & & &&  & & & &         &        &      & & $\times$ \\ \bottomrule
 \end{tabular}
