--- a/AppOutput/Program/progcost_app.tex
+++ b/AppOutput/Program/progcost_app.tex
@@ -2,7 +2,7 @@
 \toprule
 Treatment Component & Year 1& Year 2& Year 3& Year 4& Year 5 \\ \midrule
 \textbf{Transportation to/from FPGC} &  \$645 	 & 	 \$626 	 & 	 \$608 	 & 	 \$508 	 & 	 \$493 	 \\ 
-\hspace{.2cm}Costs include the cost of fuel, insurance, drivers, and a transportation clerk. It should be noted that there is some evidence suggesting that there were other adults present to supervise children as they were being transported, but we do not account for this. & \\
+\hspace{.2cm}Costs include the cost of fuel, insurance, drivers, and a transportation clerk. Two teacher assistants accompanied the children while they were transported. Their salaries are included in our cost calculation. & \\
 
 \textbf{Nutrition} &  \$408 	 & 	 \$1,602 	 & 	 \$1,945 	 & 	 \$1,888 	 & 	 \$1,833 	 \\ 
 \hspace{.2cm} Infants received iron-fortified formula for the first 15 months of life. After this, children received two meals and a snack everyday planned by a nutritionist and prepared off-site. Costs include the cost of food and preparation. & \\
