--- a/Appendices/ProgramCosts.tex
+++ b/Appendices/ProgramCosts.tex
@@ -1,10 +1,9 @@
 \section[Program Costs of ABC]{Program Costs of ABC\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
-\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. \\
-
+\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC and CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. It is crucial to note that our main estimations are based on pooling the children receiving center-based childcare in ABC and CARE to compare them with the control-group children in both programs. Children who were assigned to receive center-based childcare in CARE received family education in the form on home visits (see Appendix~\ref{appendix:programs}). None of the evidence we have at hand indicates that family education implied an additional cost. The staff implementing the center-based treatment implemented the home visits, without receiving an additional payment for the home visits.\footnote{A caveat of our calculation could be that we do not account for the transport cost to the children's homes. Our information indicates that the children lived relatively close to the center and the staff belonged to the same communities of the center. Thus, we conclude that this transportation cost was minimal.} \\
 
 \begin{table}[H]
-\caption{ABC Treatment Costs per Subject} \label{tab:treat-cost}
+\caption{Treatment Costs per Subject} \label{tab:treat-cost}
 \centering
 \begin{adjustbox}{max width=\textwidth}
 \begin{threeparttable}
@@ -31,7 +30,7 @@ services provided through ABC. The associated costs include the salaries of cent
 \begin{table}[H]
 \begin{threeparttable}
 \small
-\caption{Labor and Facilities Rental Costs of ABC Per Treated Subject} \label{tab:allprogram}
+\caption{Labor and Facilities Rental Costs of Per Treated Subject} \label{tab:allprogram}
 \centering\begin{tabular}{lccccccc} \hline \hline
 Cost category  & Age 1 & Age 2 & Age 3 & Age 4 & Age 5 & Total\\ \midrule
 \textit{Labor} & & & & & \\  %\midrule  \midrule
@@ -77,7 +76,7 @@ Table \ref{tab:treat-cost} delineates the medical costs incurred by the average 
 \noindent To approximate the average cost of medical care, we use  estimates of the average cost of medical care for infants and children 1 year to 4 years old in the 1970s. \cite{Cutler_Meara_1998_Med-Costs_BOOK} document average national health expenditure as reported by  the 1970 Survey of Health Services  Utilization  and Expenditures and the 1977 National Medical Care Utilization  and Expenditure Survey. These surveys have large samples (11,619 and 38,815, respectively) and measure the use of health services, including hospital admissions and physician visits. From these surveys, we estimate that the upper bounds on cost of medical care for subjects are \$735 in the first year of life and \$694 for each subsequent year of the program. However, because these costs include cost of health complications, including NICU costs, we refer to \cite{Robinson_etal_1974_FPP} for a more conservative estimate of first-year medical costs. \cite{Robinson_etal_1974_FPP} estimate the cost of six well-child visits provided by government-sponsored health clinics in the first year of life to be \$610 (2014 USD). \\
 
 \subsection{Staff Salaries}
-\noindent FPGC had rooms for infants, toddlers, and preschool-age children---each with different child-to-staff ratio. Infant nurseries had a ratio of 3:1. Toddler rooms and preschool classrooms had ratios of 4:1.\footnote{Playground and outdoor learning spaces had child-to-staff ratios of 5:1 and 6:1.} Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
+\noindent FPGC had rooms for infants, toddlers, and preschool-age children---each with different child-to-staff ratio---see Appendix~\ref{appendix:background}. Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
 
 \noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
 
