--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -168,9 +168,9 @@ Chetty_Friedman_etal_2011_QJoE}. For simplicity, we restrict this analysis to AB
 
 \subsection{Program Costs}
 
-\noindent The costs of the program are a fundamental input to our calculations of the benefit-to-cost ratio and the internal rate of return. We provide a brief documentation of the costs of ABC and CARE next. Appendix \ref{app:programcosts} explains other important components of the costs, including education, which is relevant given the substantial increase in long-term education for subjects of the treatment group. Similarly, it includes the costs of health and crime.\\
+\noindent The costs of the programs are a fundamental input to our calculations of the benefit-to-cost ratio and the internal rate of return. We provide a brief documentation of the costs of ABC and CARE next. Appendix \ref{app:programcosts} explains other important components of the costs, including education, which is relevant given the substantial increase in long-term education for subjects of the treatment group. Similarly, it includes the costs of health and crime.\\
 
-\noindent The program provided comprehensive center-based childcare and medical services. While we use some estimates from \cite{Masse_Barnett_2002_BOOKBenefitCostAnalysis}, our calculations of the program costs differ in two key aspects: (i) we account for the treatment group's medical care costs; and (ii) we incorporate new information on staff and program implementation to update costs. We calculate all costs as treatment effects; thus, costs of the program represent the costs of treatment minus the costs of the services that the control group received.\\
+\noindent The program provided comprehensive center-based childcare and medical services. While we use some estimates from \cite{Masse_Barnett_2002_BOOKBenefitCostAnalysis}, our calculations of the program costs differ in two key aspects: (i) we account for the treatment group's medical care costs; and (ii) we incorporate new information on staff and program implementation to update costs.\footnote{CARE's treatment group that is relevant to our calculations, the center-based childcare and family education treatment group, received an additional service if compared to the treatment group in ABC: family education. In Appendix~\ref{app:programcosts}, we argue that this resulted in no additional cost. The staff implementing the center-based childcare treatment implemented the home visits without receiving an additional payment for doing so. We argue that any transportation costs to the children's home were minimal.}
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -399,6 +399,10 @@ that the ABC and CARE subjects will have after that age. The NCDPS data provide 
 
 \noindent At each age, once we obtain the transition probability for each health outcome, we draw $100$ Monte-Carlo simulations for each subject. Thus, each simulation depends on each individual's health history and on their particular characteristics. For every simulated trajectory of health outcomes, we predict the lifetime medical expenditure using the models estimated from the MEPS and the MCBS. We then obtain an estimate of the expected lifetime medical expenditure by taking the mean of each individual's simulated lifetime medical expenditure. The same procedure is applied to QALYs.\\
 
+\noindent A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. A QALY of 1 denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than 1 when there is positive burden of disease, as worse health conditions imply lower QALYs.\footnote{When an individual dies, her QALY equals zero. It is worth noting that there are extreme combinations of disease and disability that may generate negative QALYs, although this case is unusual.} We compute a QALY model based on the EQ-5D instrument, a widely-used Health-related Quality-of-life (HRQoL) measure, available in MEPS. We then estimate this model from the PSID. Appendix~\ref{appendix:health} provides more details on this estimation strategy. \\
+
+\noindent We estimate four models of medical spending: total medical spending (medical spending from all payment sources), Medicare spending (annual medical spending paid by parts A, B, and D of Medicare), Medicaid spending (medical spending paid by Medicaid), and out-of-pocket spending (medical spending paid directly by the individual). Each medical spending model is estimated through pooled weighted least squares regressions that include a person’s demographics, economic status, current health, risk factors, and functional status as explanatory variables. The MCBS-based medical spending models also include lagged health because of the length of time for which MCBS subjects are observed.
+
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Health State Transitions, Age $a$ as Predictor of Age $a+1$}\label{table:transition}
@@ -410,10 +414,6 @@ that the ABC and CARE subjects will have after that age. The NCDPS data provide 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
-
-\noindent A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. A QALY of 1 denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than 1 when there is positive burden of disease, as worse health conditions imply lower QALYs.\footnote{When an individual dies, her QALY equals zero. It is worth noting that there are extreme combinations of disease and disability that may generate negative QALYs, although this case is unusual.} We compute a QALY model based on the EQ-5D instrument, a widely-used Health-related Quality-of-life (HRQoL) measure, available in MEPS. We then estimate this model from the PSID. Appendix~\ref{appendix:health} provides more details on this estimation strategy. \\
-
-\noindent We estimate four models of medical spending: total medical spending (medical spending from all payment sources), Medicare spending (annual medical spending paid by parts A, B, and D of Medicare), Medicaid spending (medical spending paid by Medicaid), and out-of-pocket spending (medical spending paid directly by the individual). Each medical spending model is estimated through pooled weighted least squares regressions that include a person’s demographics, economic status, current health, risk factors, and functional status as explanatory variables. The MCBS-based medical spending models also include lagged health because of the length of time for which MCBS subjects are observed.\\
 
 \noindent \textbf{Medical Expenditure before Age 30}
 
@@ -450,9 +450,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 
 \subsection{Treatment Effects} \label{section:teresults}
 
-\noindent We consider \noutcomes\ measures of human development across the life cycle and count the measures for which the program had a ``socially positive'' effect, without accounting for control substitution. We do this for both ABC and CARE by focusing on the first phase of treatment to compare subjects who received center-based childcare to control-group subjects---noting that assignment was random.\footnote{In ABC, this implies comparing the subjects who were randomly assigned to the treatment group to the subjects who were randomly assigned to the control group, in the first phase. In CARE, this implies comparing the subjects who were randomly assigned to receive center-based childcare and family education to the subjects who were randomly assigned to the control group, in the first phase as well.} Figure~\ref{fig:ppositive} displays the results from this exercise: ABC and CARE positively impact a large percentage of the outcomes we consider.\footnote{The calculation of the standard errors follows from the bootstrap procedure we discuss in Section~\ref{section:methodology}.}\\ 
-
-\noindent We can further decompose the counts in Figure~\ref{fig:ppositive} into arbitrary categories. To economize space, we present this exercise pooling ABC and CARE. That is, we decompose the effects described in the last two bars of Figure~\ref{fig:ppositive}. Figure~\ref{fig:ppositivecategory1} and Figure~\ref{fig:ppositivecategory2} present this exercise. This helps us better understand the type of outcomes the programs affected. The results indicate that a large and precise fraction of effects are positive for outcomes spanning the life cycle, from parental income to crime and including a wide variety of health categories.
+\noindent We consider \noutcomes\ measures of human development across the life cycle and count the measures for which the program had a ``socially positive'' effect, without accounting for control substitution. We do this for both ABC and CARE by focusing on the first phase of treatment to compare subjects who received center-based childcare to control-group subjects---noting that assignment was random.\footnote{In ABC, this implies comparing the subjects who were randomly assigned to the treatment group to the subjects who were randomly assigned to the control group, in the first phase. In CARE, this implies comparing the subjects who were randomly assigned to receive center-based childcare and family education to the subjects who were randomly assigned to the control group, in the first phase as well.} Figure~\ref{fig:ppositive} displays the results from this exercise: ABC and CARE positively impact a large percentage of the outcomes we consider.\footnote{The calculation of the standard errors follows from the bootstrap procedure we discuss in Section~\ref{section:methodology}.}
 
 \begin{figure}[H]
 		\caption{Positively Impacted Outcomes, ABC and CARE} \label{fig:ppositive}
@@ -462,9 +460,9 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \noindent Note: The first two bars (ABC) compare the treatment and control groups in ABC. The third and fourth bars (CARE) compare the subjects who received center-based childcare and family education to the subjects who receive either family education or no treatment at all. The last two bars (ABC and CARE) pool the two previous sets of comparisons.}
 \end{figure}
 
-\noindent Next we present an overview of outcome-specific results. Appendix~\ref{appendix:results} displays an extensive summary of the estimates for the \noutcomes\ outcomes we consider. Note that: (i) we arbitrarily pick the outcomes we discuss next because we consider them of economic interest; and (ii) Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}. We do not lose significance in the majority of outcomes.\\
+\noindent We can further decompose the counts in Figure~\ref{fig:ppositive} into arbitrary categories. To economize space, we present this exercise pooling ABC and CARE. That is, we decompose the effects described in the last two bars of Figure~\ref{fig:ppositive}. Figure~\ref{fig:ppositivecategory1} and Figure~\ref{fig:ppositivecategory2} present this exercise. This helps us better understand the type of outcomes the programs affected. The results indicate that a large and precise fraction of effects are positive for outcomes spanning the life cycle, from parental income to crime and including a wide variety of health categories.\\
 
-\noindent Table~\ref{table:females} presents the results for females. We focus on three columns. Columns~(2) displays the estimates of the parameter in \eqref{eq:mainest}. This parameter speaks to the effectiveness of the programs, \textit{as implemented}. Columns~(5) and ~(8) display estimates of the parameters in \eqref{eq:par0} and \eqref{eq:par1}. The former speaks to the effectiveness of the programs relative to the counterfactual of \textit{staying at home}. The latter speaks to the effectiveness of the programs relative to \textit{attending an alternative preschool}. All of these three estimates account for program attrition and control for a set of background variables.\footnote{See Appendix~\ref{appendix:methodology} for our methodology to account for attrition and Appendix~\ref{appendix:controls} for our procedure for selecting controls.}\\
+\noindent Next we present an overview of outcome-specific results. Appendix~\ref{appendix:results} displays an extensive summary of the estimates for the \noutcomes\ outcomes we consider. Note that: (i) we arbitrarily pick the outcomes we discuss next because we consider them of economic interest; and (ii) Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}. We do not lose significance in the majority of outcomes.
 
 \begin{figure}[H]
 		\caption{Positively Impacted Outcomes by Category, ABC and CARE} \label{fig:ppositivecategory1}
@@ -474,7 +472,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \noindent Note: For each outcome category, we compare the mean of the subjects who received center-based childcare in ABC and center-based childcare and family education in CARE to the mean of the subjects in the control group in both programs and count the number of positive comparisons.}
 \end{figure}
 
-\noindent Column~(2) shows that the program caused substantial gains in a variety of economically relevant short- and long-term outcomes, as implemented. First, the programs have an effect on IQ that goes beyond the effects of many early childhood education programs, which usually fade out after a year of elementary school \citep{Hojman_2015_EvidenceFadeOut,Elango_Hojman_etal_2016_Early-Edu}. To put this effect in perspective, note that IQ and achievement tests scores are standardized to a nationally representative population with a standard deviation of 15 points. The effect of the programs we study amounts to more than $2/3$ of a standard deviation. The largest effect of Head Start, for example, happens before elementary school and amounts to half of the effect of ABC and CARE at age 12, the latter effect being measured after elementary school \citep{Elango_Hojman_etal_2016_Early-Edu}. The programs also have a substantial effect on achievement, which not only measures cognition but mathematics and reading knowledge.
+\noindent Table~\ref{table:females} presents the results for females. We focus on three columns. Columns~(2) displays the estimates of the parameter in \eqref{eq:mainest}. This parameter speaks to the effectiveness of the programs, \textit{as implemented}. Columns~(5) and ~(8) display estimates of the parameters in \eqref{eq:par0} and \eqref{eq:par1}. The former speaks to the effectiveness of the programs relative to the counterfactual of \textit{staying at home}. The latter speaks to the effectiveness of the programs relative to \textit{attending an alternative preschool}. All of these three estimates account for program attrition and control for a set of background variables.\footnote{See Appendix~\ref{appendix:methodology} for our methodology to account for attrition and Appendix~\ref{appendix:controls} for our procedure for selecting controls.}\\
 
 \begin{figure}[H]
 		\caption{Positively Impacted Health Outcomes, ABC and CARE} \label{fig:ppositivecategory2}
@@ -483,6 +481,8 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \footnotesize
 \noindent Note: For each outcome category, we compare the mean of the subjects who received center-based childcare in ABC and center-based childcare and family education in CARE to the mean of the subjects in the control group in both programs and count the number of positive comparisons.}
 \end{figure} 
+
+\noindent Column~(2) shows that the program caused substantial gains in a variety of economically relevant short- and long-term outcomes, as implemented. First, the programs have an effect on IQ that goes beyond the effects of many early childhood education programs, which usually fade out after a year of elementary school \citep{Hojman_2015_EvidenceFadeOut,Elango_Hojman_etal_2016_Early-Edu}. To put this effect in perspective, note that IQ and achievement tests scores are standardized to a nationally representative population with a standard deviation of 15 points. The effect of the programs we study amounts to more than $2/3$ of a standard deviation. The largest effect of Head Start, for example, happens before elementary school and amounts to half of the effect of ABC and CARE at age 12, the latter effect being measured after elementary school \citep{Elango_Hojman_etal_2016_Early-Edu}. The programs also have a substantial effect on achievement, which not only measures cognition but mathematics and reading knowledge.
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -532,9 +532,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 
 \noindent Parental income and crime are the components for which the internal rate of return and the benefit-to-cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $15$ years of the children's life.\footnote{We do not account for treatment effects on parental income beyond age 15. Some children report to move out of their households as early as this age. This makes ambiguous the effects that parental income could have on the subjects after age 15.} Although crime is subject to more discounting, the amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit-to-cost ratio.\\ 
 
-\noindent The estimates are robust to individually removing the rest of the components, and in most cases remain statistically significant. This happens for one of either two reasons: (i) the effects are substantial but they are heavily discounted because they happen later in life---e.g. labor income; or (ii) the effects happen early in life but are not as substantial---as in the amount that the control-group parents pay for their children to attend alternative preschools.\\
-
-\noindent Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates lose significance due to the reduction of observations after splitting the sample by gender. The point estimates remain robust across  the sensitivity analysis.
+\noindent The estimates are robust to individually removing the rest of the components, and in most cases remain statistically significant. This happens for one of either two reasons: (i) the effects are substantial but they are heavily discounted because they happen later in life---e.g. labor income; or (ii) the effects happen early in life but are not as substantial---as in the amount that the control-group parents pay for their children to attend alternative preschools.
 
 \begin{sidewaystable}[H] 
 \begin{threeparttable}
@@ -580,6 +578,8 @@ Deadweight Loss	&		&	0.23	&	\textbf{4.74}	&		&	0.15	&	10.19	&		&	0.13	&	\textbf{
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
+
+\noindent Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates lose significance due to the reduction of observations after splitting the sample by gender. The point estimates remain robust across  the sensitivity analysis.\\
 
 \noindent For females, we observe consistency except for the case where we remove the parental income component. We can observe that the female sample is the main driver of parental income when comparing its net present value between females and males.\\
 
